[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["lynnlo <<>>"]
description = ""
name = "repl_python3_AI-Poet"
version = "0.1.0"
[tool.poetry.dependencies]
keras = "^2.9.0"
numpy = "^1.23.0"
python = "^3.8"
[tool.poetry.dev-dependencies]
